Se agrega un footer para identificar el proyecto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="contenedor">
         <canvas id="gameScreen" width="800", height="300"></canvas>
     </div>
-    
+    <footer>
+Made by: Sergio Felipe Zapeta
+    </footer>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
